booking popup css spacing fixes

--- a/src/html_css/stylesheet.css
+++ b/src/html_css/stylesheet.css
@@ -12,6 +12,10 @@
 	align-items: center;
 }
 
+.date-column{
+	padding-right: 20px;
+}
+
 .select-user-type{
 	outline: black solid thick;
 }
